Fixed navbar on mobile

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1105,7 +1105,7 @@ body {
   background-color: var(--body-color);
   box-shadow: 0 2px 16px hsla(230, 75%, 32%, 0.15);
   z-index: var(--z-fixed);
-  padding: 0 2rem;
+  padding: 2rem 2rem;
 }
 
 .custom_nav {
@@ -1157,6 +1157,12 @@ body {
   right: 1.5rem;
 }
 
+#kakushin_logo_inside{
+  position: absolute;
+  top: 2rem;
+  left: 1.5rem;
+}
+
 .custom_nav__actions {
   display: flex;
   align-items: center;
@@ -1181,6 +1187,16 @@ body {
 /* Show menu */
 .custom_show-menu {
   top: 0;
+}
+
+#navbar_logo{
+  width: 90px;
+  height: auto;
+}
+
+#icon_menu{
+  height: 40px;
+  width: 40px;
 }
 
 /*=============== BREAKPOINTS ===============*/
@@ -1241,6 +1257,7 @@ body {
     padding: 3rem 2rem 3.5rem;
   }
 }
+
 
 @media screen and (min-width: 1150px) {
   .custom_container {
